--- a/home.html
+++ b/home.html
@@ -3,9 +3,8 @@
 <head>
     <title>Jared M</title>
     
-    <!--importing boostrap & Animisition-->
+    <!--importing boostrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animsition/4.0.2/css/animsition.min.css">
     
     <!--Importing stylesheet & fonts-->
     <link rel="stylesheet" type="text/css" href="homestyle.css">
@@ -15,7 +14,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 </head>
 <body>
-    <div class="container animsition-overlay" data-animsition-overlay="true">
+    <div class="container">
         <div class="row social">
             <div class="col-md-2">
 
@@ -39,13 +38,13 @@
             <div class="col-lg-2"></div>
         </div>
         <div class="row navBar">
-            <div class='col-lg-3'><a href='about.html' class="animsition-link" ><button class='btn btn-1 btn-1e'>ABOUT</button></a></div>
-            <div class='col-lg-3'><a href='about.html' class="animsition-link" ><button class='btn btn-1 btn-1e'>PORTFOLIO</button></a></div>
-            <div class='col-lg-3'><a href='about.html' class="animsition-link" ><button class='btn btn-1 btn-1e'>RESUME</button></a></div>
-            <div class='col-lg-3'><a href='contact.html' class="animsition-link" data-animsition-out-class="overlay-slide-out-right" data-animsition-in-class="overlay-slide-in-right"><button class='btn btn-1 btn-1e'>CONTACT</button></a></div>
+            <div class='col-lg-3'><a href='about.html'><button class='btn btn-1 btn-1e'>ABOUT</button></a></div>
+            <div class='col-lg-3'><a href='about.html'><button class='btn btn-1 btn-1e'>PORTFOLIO</button></a></div>
+            <div class='col-lg-3'><a href='about.html'><button class='btn btn-1 btn-1e'>RESUME</button></a></div>
+            <div class='col-lg-3'><a href='contact.html'><button class='btn btn-1 btn-1e'>CONTACT</button></a></div>
         </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animsition/4.0.2/js/animsition.js"></script>
+    <script src="aimsition.js"></script>
     <script type="text/javascript" src='homeJS.js'></script>
 </body>
 </html>
