--- a/homev2.html
+++ b/homev2.html
@@ -15,17 +15,12 @@
     <script src="jquery.parallax.js"></script>
 </head>
 <body>
-    <section id="header">
-        <div class="container">
-            <div class='row'>
-                <div class='col-lg-3'></div>
-                <div class='col-lg-3'>Yellow</div>
-                <div class='col-lg-3'></div>
-                <div class='col-lg-3'></div>
-            </div>
-        </div>
-    </section>
-    <div class="some-class" data-src="header.jpeg" data-pos-x="left" data-parallax>
+    <!-- Navbar -->
+    <nav class="navbar fixed-top navbar-light bg-light">
+        <a class="navbar-brand" href="#">Fixed top</a>
+    </nav>
+    <!-- Parralax Section 1 -->
+    <div class='firstLax'>
         <div class="container">
             <div class="row nameHeader">
                 <div class="col-lg-2"></div>
@@ -36,15 +31,33 @@
             </div>
         </div>
     </div>
-    <section id="about">
-        <div class="container">
-            yellow
+    <!-- Introduction -->
+    <div class='intro'>
+        <div class='container'>
+
         </div>
-    </section>
+    </div>
+    <!-- Portfolio -->
+    <div class='portfolio'>
+        <div class='container'>
+
+        </div>
+    </div>
+    <!-- Resune -->
+    <div class='resume'>
+        <div class='container'>
+
+        </div>
+    </div>
+    <!-- Parralax Section 2 -->
+    <div class='secondLax'></div>
+    <!-- Contact -->
+    <div class='contact'>
+        <div class='container'>
+
+        </div>
+    </div>
+
     <script type="text/javascript" src='homeJS.js'></script>
-    <script type='text/javascript'>
-        var snowflakes = new Snowflakes(body,some-class);
-        snowflakes.create(50);
-    </script>
 </body>
 </html>
