--- a/homev2.html
+++ b/homev2.html
@@ -16,8 +16,12 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar fixed-top navbar-light bg-light">
-        <a class="navbar-brand" href="#">Fixed top</a>
+    <nav class="navbar fixed-top navbar-light navbar-bg">
+        <a class="navbar-brand navHidden">Fixed top</a>
+        <a class="navbar-brand navHidden">Fixed top</a>
+        <a class="navbar-brand navTrigger"><- Jared M -></a>
+        <a class="navbar-brand navHidden">Fixed top</a>
+        <a class="navbar-brand navHidden">Fixed top</a>
     </nav>
     <!-- Parralax Section 1 -->
     <div class='firstLax'>
