--- a/homev2.html
+++ b/homev2.html
@@ -17,11 +17,11 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar fixed-top navbar-light navbar-bg">
-        <a class="navbar-brand navHidden">Fixed top</a>
-        <a class="navbar-brand navHidden">Fixed top</a>
+        <a class="navbar-brand navHidden">About</a>
+        <a class="navbar-brand navHidden">Portfolio</a>
         <a class="navbar-brand navTrigger"><- Jared M -></a>
-        <a class="navbar-brand navHidden">Fixed top</a>
-        <a class="navbar-brand navHidden">Fixed top</a>
+        <a class="navbar-brand navHidden">Resume</a>
+        <a class="navbar-brand navHidden">Contact</a>
     </nav>
     <!-- Parralax Section 1 -->
     <div class='firstLax'>
