--- a/homev2.html
+++ b/homev2.html
@@ -19,7 +19,7 @@
     <nav class="navbar fixed-top navbar-light navbar-bg">
         <a class="navbar-brand navHidden">About</a>
         <a class="navbar-brand navHidden">Portfolio</a>
-        <a class="navbar-brand navTrigger"><- Jared M -></a>
+        <a class="navbar-brand navTrigger"><span id="centerNav"><- Jared M -></span></a>
         <a class="navbar-brand navHidden">Resume</a>
         <a class="navbar-brand navHidden">Contact</a>
     </nav>
