--- a/homev2.html
+++ b/homev2.html
@@ -17,10 +17,10 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar fixed-top navbar-light navbar-bg">
-        <a class="navbar-brand navHidden">About</a>
-        <a class="navbar-brand navHidden">Portfolio</a>
-        <a class="navbar-brand navTrigger"><span id="centerNav"><- Jared M -></span></a>
+        <a class="navbar-brand navHidden" href='#intro'>About</a>
         <a class="navbar-brand navHidden">Resume</a>
+        <a class="navbar-brand navTrigger"><span id="centerNav"><- Jared M -></span></a>
+        <a class="navbar-brand navHidden">Portfolio</a>
         <a class="navbar-brand navHidden">Contact</a>
     </nav>
     <!-- Parralax Section 1 -->
@@ -36,27 +36,96 @@
         </div>
     </div>
     <!-- Introduction -->
-    <div class='intro'>
+    <div id='intro'>
         <div class='container'>
+            <div class='row'>
+                <div class='col-md-1 sideBar'>
 
+                </div>
+                <div class='col-md-5'><img src="https://aminoapps.com/static/img/user-icon-placeholder.png" class='pfp'></div>
+                <div class='col-md-6'>
+                    <section class='aboutdesc'>
+                        <h2 class='nameEmph'>Jared Mezzatesta</h2>
+                        <h2>18 Years Old</h2>
+                        <h2>University of Toronto</h2>
+                    </section>
+                </div>
+            </div>
         </div>
     </div>
     <!-- Portfolio -->
-    <div class='portfolio'>
+    <div id='resume'>
         <div class='container'>
+            <!-- Skills -->
+            <div class='row'>
+                <div class='col-md-1 sideBar'></div>
+                <div class='col-md-8'>
+                    <h2 class='titleHighlight'>Resume</h2>
+                    </br>
+                    <div class='blurp'>
+                        <h4>HTML/CSS/Javascript</h4>
+                        <p>Developed through a personal interest.</p>
+                        <h4>Python</h4>
+                        <p>Used throughout 3 years of schooling.</p>
+                    </div>
+                </div>
+                <div class='col-md-3'>
+                    <!-- Header -->
+                    <br>
+                    <h3>Skills</h3>
+                </div>
+            </div>
 
-        </div>
-    </div>
-    <!-- Resune -->
-    <div class='resume'>
-        <div class='container'>
+            <!-- Work History -->
+            <div class='row'>
+                <div class='col-md-1 sideBar'></div>
+                <div class='col-md-7 blurp'>
+                    </br>
+                    <h4>Tim Hortons</h4>
+                    <p>Counter Staff, Food Production, Supervisor</p>
+                    <p>2015-2017</p>
+                </div>
+                <div class='col-md-4'>
+                    <!-- Header -->
+                    <h3>Work History</h3>
+                </div>
+            </div>
 
+            <!-- Education -->
+            <div class='row'>
+                <div class='col-md-1 sideBar'></div>
+                <div class='col-md-8 blurp'>
+                    </br>
+                    <h4>University of Toronto</h4>
+                    <p>Pursing a degree in Computer Science</p>
+                    <p>2017-2021</p>
+                </div>
+                <div class='col-md-3'>
+                    <!-- Header -->
+                    <h3>Education</h3>
+                </div>
+            </div>
+            <div class='row'>
+                <div class='col-md-1 sideBar'></div>
+                <div class='col-md-7'>
+
+                </div>
+                <div class='col-md-4'>
+                    <!-- Spacing -->
+                </div>
+            </div>
         </div>
     </div>
     <!-- Parralax Section 2 -->
     <div class='secondLax'></div>
+    <!-- Resune -->
+    <div id='portfolio'>
+        <div class='container'>
+
+        </div>
+    </div>
     <!-- Contact -->
-    <div class='contact'>
+    <div id='contact'>
         <div class='container'>
 
         </div>
