--- a/homev2.html
+++ b/homev2.html
@@ -18,10 +18,10 @@
     <!-- Navbar -->
     <nav class="navbar fixed-top navbar-light navbar-bg">
         <a class="navbar-brand navHidden" href='#intro'>About</a>
-        <a class="navbar-brand navHidden">Resume</a>
+        <a class="navbar-brand navHidden" href='#resume'>Resume</a>
         <a class="navbar-brand navTrigger"><span id="centerNav"><- Jared M -></span></a>
-        <a class="navbar-brand navHidden">Portfolio</a>
-        <a class="navbar-brand navHidden">Contact</a>
+        <a class="navbar-brand navHidden" href='portfolio'>Portfolio</a>
+        <a class="navbar-brand navHidden" href='contact'>Contact</a>
     </nav>
     <!-- Parralax Section 1 -->
     <div class='firstLax'>
@@ -103,15 +103,6 @@
                 <div class='col-md-3'>
                     <!-- Header -->
                     <h3>Education</h3>
-                </div>
-            </div>
-            <div class='row'>
-                <div class='col-md-1 sideBar'></div>
-                <div class='col-md-7'>
-
-                </div>
-                <div class='col-md-4'>
-                    <!-- Spacing -->
                 </div>
             </div>
         </div>
