--- a/homev2.html
+++ b/homev2.html
@@ -40,7 +40,7 @@
         <div class='container'>
             <div class='row'>
                 <div class='col-md-1 sideBar'>
-
+                    <!-- Spacing and sidebar -->
                 </div>
                 <div class='col-md-5'><img src="https://aminoapps.com/static/img/user-icon-placeholder.png" class='pfp'></div>
                 <div class='col-md-6'>
@@ -112,16 +112,52 @@
     <!-- Resune -->
     <div id='portfolio'>
         <div class='container'>
-
+            <div class='row'>
+                <div class='col-md-1 sideBar'></div>
+                <div class='col-md-11'>
+                    <h2 class='titleHighlight'>Portfolio</h2>
+                    </br>
+                    <div class='row'>
+                        <div class='col-md-3 siteView'></div>
+                        <div class='col-md-3 siteView'></div>
+                        <div class='col-md-3 siteView'></div>
+                    </div>
+                    <div class='row'>
+                        <div class='col-md-3 siteView'></div>
+                        <div class='col-md-3 siteView'></div>
+                        <div class='col-md-3 siteView'></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <!-- Contact -->
+
     <div id='contact'>
         <div class='container'>
+            <div class='row'>
+                <div class='col-md-1 sideBar'></div>
+                <div class='col-md-11'>
+                    <h2 class='titleHighlight'>Contact</h2>
+                    </br>
+                    <h5>Feel free to shoot me a message and I'll be sure to get back to you.</h5>
+                    <form class='myForm'>
 
+                        <label for="yname">Name </label>
+                        <input type="text" placeholder='- your name' id='yname'>
+                        </br>
+                        <label for="yemail">Email </label>
+                        <input type="email" placeholder='- your email' id='yemail'>
+                        </br>
+                        <label for="ymessage"></label>
+                        <textarea name="textarea" id="ymessage" cols="75" rows="5" placeholder='your message.'></textarea>
+                        </br>
+                        <button class='submitButton' type='button'>Submit</button>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
-
     <script type="text/javascript" src='homeJS.js'></script>
 </body>
 </html>
