Switched navbar setup, still need to theme.

--- a/homev2.html
+++ b/homev2.html
@@ -17,11 +17,22 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar fixed-top navbar-light navbar-bg">
-        <a class="navbar-brand navHidden" href='#intro'>About</a>
-        <a class="navbar-brand navHidden" href='#resume'>Resume</a>
-        <a class="navbar-brand navTrigger"><span id="centerNav"><- Jared M -></span></a>
-        <a class="navbar-brand navHidden" href='portfolio'>Portfolio</a>
-        <a class="navbar-brand navHidden" href='contact'>Contact</a>
+        <!-- <a class="navbar-link navHidden" href='#intro'>About</a>
+        <a class="navbar-link navHidden" href='#resume'>Resume</a>
+        <a class="navbar-brand navTrigger"><- Jared M -></a>
+        <a class="navbar-link navHidden" href='portfolio'>Portfolio</a>
+        <a class="navbar-link navHidden" href='contact'>Contact</a> -->
+        <div class='row'>
+            <div class='col-md-1 navHidden'></div>
+            <div class='col-md-1 navHidden'><a href="#intro">About</a></div>
+            <div class='col-md-1 navHidden'></div>
+            <div class='col-md-1 navHidden'><a href="#resume">Resume</a></div>
+            <div class='col-md-4 navTrigger '>Jared M</div>
+            <div class='col-md-1 navHidden'><a href="#portfolio">Portfolio</a></div>
+            <div class='col-md-1 navHidden'></div>
+            <div class='col-md-1 navHidden'><a href="#contact">Contact</a></div>
+            <div class='col-md-1 navHidden'></div>
+        </div>
     </nav>
     <!-- Parralax Section 1 -->
     <div class='firstLax'>
@@ -29,7 +40,7 @@
             <div class="row nameHeader">
                 <div class="col-lg-2"></div>
                 <div class="col-lg-8 col-md-12 homeName">
-                    <h2>Hi, I'm <br><span id='name'>Jared Mezzatesta</span><br>Ameteur CSS/HTML/JS Developer</h2>
+                    <h2>Hi, I'm <br><span id='name'>Jared Mezzatesta</span><br>Ameteur Python/Web Developer.</h2>
                 </div>
                 <div class="col-lg-2"></div>
             </div>
