--- a/homev2.html
+++ b/homev2.html
@@ -24,13 +24,13 @@
         <a class="navbar-link navHidden" href='contact'>Contact</a> -->
         <div class='row'>
             <div class='col-md-1 navHidden'></div>
-            <div class='col-md-1 navHidden'><a href="#intro">About</a></div>
+            <div class='col-md-1 navHidden'><a href="#intro" class='navOption'>About</a></div>
             <div class='col-md-1 navHidden'></div>
-            <div class='col-md-1 navHidden'><a href="#resume">Resume</a></div>
-            <div class='col-md-4 navTrigger '>Jared M</div>
-            <div class='col-md-1 navHidden'><a href="#portfolio">Portfolio</a></div>
+            <div class='col-md-1 navHidden'><a href="#resume" class='navOption'>Resume</a></div>
+            <div class='col-md-12 navTrigger nameEmph'>Jared M</div>
+            <div class='col-md-1 navHidden'><a href="#portfolio" class='navOption'>Portfolio</a></div>
             <div class='col-md-1 navHidden'></div>
-            <div class='col-md-1 navHidden'><a href="#contact">Contact</a></div>
+            <div class='col-md-1 navHidden'><a href="#contact" class='navOption'>Contact</a></div>
             <div class='col-md-1 navHidden'></div>
         </div>
     </nav>
@@ -40,7 +40,7 @@
             <div class="row nameHeader">
                 <div class="col-lg-2"></div>
                 <div class="col-lg-8 col-md-12 homeName">
-                    <h2>Hi, I'm <br><span id='name'>Jared Mezzatesta</span><br>Ameteur Python/Web Developer.</h2>
+                    <h2>Hi, I'm <br><span id='name'>Jared Mezzatesta</span><br>Amateur Python/Web Developer.</h2>
                 </div>
                 <div class="col-lg-2"></div>
             </div>
@@ -90,15 +90,15 @@
             <!-- Work History -->
             <div class='row'>
                 <div class='col-md-1 sideBar'></div>
-                <div class='col-md-7 blurp'>
+                <div class='col-md-8 blurp'>
                     </br>
                     <h4>Tim Hortons</h4>
                     <p>Counter Staff, Food Production, Supervisor</p>
                     <p>2015-2017</p>
                 </div>
-                <div class='col-md-4'>
+                <div class='col-md-3'>
                     <!-- Header -->
-                    <h3>Work History</h3>
+                    <h3>Employment</h3>
                 </div>
             </div>
 
