Cleaned up some styling. Added second footer.

--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
             <div class='col-md-1 navHidden'><a href="#intro" class='navOption'>About</a></div>
             <div class='col-md-1 navHidden'></div>
             <div class='col-md-1 navHidden'><a href="#resume" class='navOption'>Resume</a></div>
-            <div class='col-md-12 navTrigger nameEmph'>Jared M</div>
+            <div class='col-md-12 navTrigger headerName'>Jared M</div>
             <div class='col-md-1 navHidden'><a href="#portfolio" class='navOption'>Portfolio</a></div>
             <div class='col-md-1 navHidden'></div>
             <div class='col-md-1 navHidden'><a href="#contact" class='navOption'>Contact</a></div>
@@ -49,15 +49,19 @@
     <div id='intro'>
         <div class='container'>
             <div class='row'>
-                <div class='col-md-1 sideBar'>
-                    <!-- Spacing and sidebar -->
-                </div>
-                <div class='col-md-5'><img src="https://aminoapps.com/static/img/user-icon-placeholder.png" class='pfp'></div>
                 <div class='col-md-6'>
                     <section class='aboutdesc'>
                         <h2 class='nameEmph'>Jared Mezzatesta</h2>
                         <h2>18 Years Old</h2>
                         <h2>University of Toronto</h2>
+                    </section>
+                </div>
+                <div class='col-md-6'>
+                    <section class='social'>
+                        <h2>Github - <a href="https://github.com/JaredMezz2">JaredMezz2</a></h2>
+                        <h2>LinkedIn - <a href="https://www.linkedin.com/in/jared-mezzatesta-172a91122/">JaredMezzatesta</a></h2>
+                        <h2>Twitter - <a href="https://www.twitter.com/JaredMezz">@JaredMezz</a></h2>
+
                     </section>
                 </div>
             </div>
@@ -71,7 +75,7 @@
                 <div class='col-md-1 sideBar'></div>
                 <div class='col-md-8'>
                     <h2 class='titleHighlight'>Resume</h2>
-                    </br>
+                    <br>
                     <div class='blurp'>
                         <h4>HTML/CSS/Javascript</h4>
                         <p>Developed through a personal interest.</p>
@@ -90,7 +94,7 @@
             <div class='row'>
                 <div class='col-md-1 sideBar'></div>
                 <div class='col-md-8 blurp'>
-                    </br>
+                    <br>
                     <h4>Tim Hortons</h4>
                     <p>Counter Staff, Food Production, Supervisor</p>
                     <p>2015-2017</p>
@@ -105,7 +109,7 @@
             <div class='row'>
                 <div class='col-md-1 sideBar'></div>
                 <div class='col-md-8 blurp'>
-                    </br>
+                    <br>
                     <h4>University of Toronto</h4>
                     <p>Pursing a degree in Computer Science</p>
                     <p>2017-2021</p>
@@ -126,7 +130,7 @@
                 <div class='col-md-1 sideBar'></div>
                 <div class='col-md-11'>
                     <h2 class='titleHighlight'>Portfolio</h2>
-                    </br>
+                    <br>
                     <div class='row'>
                         <div class='col-md-3 siteView'></div>
                         <div class='col-md-3 siteView'></div>
@@ -149,18 +153,18 @@
                 <div class='col-md-1 sideBar'></div>
                 <div class='col-md-11'>
                     <h2 class='titleHighlight'>Contact</h2>
-                    </br>
+                    <br>
                     <h5>Feel free to shoot me a message and I'll be sure to get back to you.</h5>
                     <form class='myForm'>
                         <label for="yname">Name </label>
                         <input type="text" placeholder='- your name' id='yname'>
-                        </br>
+                        <br>
                         <label for="yemail">Email </label>
                         <input type="email" placeholder='- your email' id='yemail'>
-                        </br>
+                        <br>
                         <label for="ymessage"></label>
                         <textarea name="textarea" id="ymessage" cols="70" rows="5" placeholder='your message.'></textarea>
-                        </br>
+                        <br>
                         <button class='submitButton' type='button'>Submit</button>
                     </form>
                 </div>
