Added input autocomplete.

--- a/home.html
+++ b/home.html
@@ -157,10 +157,10 @@
                     <h5>Feel free to shoot me a message and I'll be sure to get back to you.</h5>
                     <form class='myForm'>
                         <label for="yname">Name </label>
-                        <input type="text" placeholder='- your name' id='yname'>
+                        <input type="text" placeholder='- your name' id='yname' autocomplete="name">
                         <br>
                         <label for="yemail">Email </label>
-                        <input type="email" placeholder='- your email' id='yemail'>
+                        <input type="email" placeholder='- your email' id='yemail' autocomplete="email">
                         <br>
                         <label for="ymessage"></label>
                         <textarea name="textarea" id="ymessage" cols="70" rows="5" placeholder='your message.'></textarea>
