Fixed navbar overlap issue

--- a/home.html
+++ b/home.html
@@ -14,163 +14,163 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 </head>
 <body>
-    <!-- Navbar -->
-    <nav class="navbar fixed-top navbar-light navbar-bg">
-        <!-- <a class="navbar-link navHidden" href='#intro'>About</a>
-        <a class="navbar-link navHidden" href='#resume'>Resume</a>
-        <a class="navbar-brand navTrigger"><- Jared M -></a>
-        <a class="navbar-link navHidden" href='portfolio'>Portfolio</a>
-        <a class="navbar-link navHidden" href='contact'>Contact</a> -->
+s<!-- Navbar -->
+<nav class="navbar fixed-top navbar-light navbar-bg">
+    <!-- <a class="navbar-link navHidden" href='#intro'>About</a>
+    <a class="navbar-link navHidden" href='#resume'>Resume</a>
+    <a class="navbar-brand navTrigger"><- Jared M -></a>
+    <a class="navbar-link navHidden" href='portfolio'>Portfolio</a>
+    <a class="navbar-link navHidden" href='contact'>Contact</a> -->
+    <div class='row'>
+        <div class='col-md-1 navHidden'></div>
+        <div class='col-md-1 navHidden'><a href="#intro" class='navOption'>About</a></div>
+        <div class='col-md-1 navHidden'></div>
+        <div class='col-md-1 navHidden'><a href="#resume" class='navOption'>Resume</a></div>
+        <div class='col-md-12 navTrigger headerName'>Jared M</div>
+        <div class='col-md-1 navHidden'><a href="#portfolio" class='navOption'>Portfolio</a></div>
+        <div class='col-md-1 navHidden'></div>
+        <div class='col-md-1 navHidden'><a href="#contact" class='navOption'>Contact</a></div>
+        <div class='col-md-1 navHidden'></div>
+    </div>
+</nav>
+<!-- Parralax Section 1 -->
+<div class='firstLax'>
+    <div class="container">
+        <div class="row nameHeader">
+            <div class="col-lg-2"></div>
+            <div class="col-lg-8 col-md-12 homeName">
+                <h2>Hi, I'm <br><span id='name'>Jared Mezzatesta</span><br>Amateur Python/Web Developer.</h2>
+            </div>
+            <div class="col-lg-2"></div>
+        </div>
+    </div>
+</div>
+<!-- Introduction -->
+<div id='intro'>
+    <div class='container'>
         <div class='row'>
-            <div class='col-md-1 navHidden'></div>
-            <div class='col-md-1 navHidden'><a href="#intro" class='navOption'>About</a></div>
-            <div class='col-md-1 navHidden'></div>
-            <div class='col-md-1 navHidden'><a href="#resume" class='navOption'>Resume</a></div>
-            <div class='col-md-12 navTrigger headerName'>Jared M</div>
-            <div class='col-md-1 navHidden'><a href="#portfolio" class='navOption'>Portfolio</a></div>
-            <div class='col-md-1 navHidden'></div>
-            <div class='col-md-1 navHidden'><a href="#contact" class='navOption'>Contact</a></div>
-            <div class='col-md-1 navHidden'></div>
-        </div>
-    </nav>
-    <!-- Parralax Section 1 -->
-    <div class='firstLax'>
-        <div class="container">
-            <div class="row nameHeader">
-                <div class="col-lg-2"></div>
-                <div class="col-lg-8 col-md-12 homeName">
-                    <h2>Hi, I'm <br><span id='name'>Jared Mezzatesta</span><br>Amateur Python/Web Developer.</h2>
-                </div>
-                <div class="col-lg-2"></div>
+            <div class='col-md-6'>
+                <section class='aboutdesc'>
+                    <h2 class='nameEmph'>Jared Mezzatesta</h2>
+                    <h2>18 Years Old</h2>
+                    <h2>University of Toronto</h2>
+                </section>
             </div>
-        </div>
-    </div>
-    <!-- Introduction -->
-    <div id='intro'>
-        <div class='container'>
-            <div class='row'>
-                <div class='col-md-6'>
-                    <section class='aboutdesc'>
-                        <h2 class='nameEmph'>Jared Mezzatesta</h2>
-                        <h2>18 Years Old</h2>
-                        <h2>University of Toronto</h2>
-                    </section>
-                </div>
-                <div class='col-md-6'>
-                    <section class='social'>
-                        <h2>Github - <a href="https://github.com/JaredMezz2">JaredMezz2</a></h2>
-                        <h2>LinkedIn - <a href="https://www.linkedin.com/in/jared-mezzatesta-172a91122/">JaredMezzatesta</a></h2>
-                        <h2>Twitter - <a href="https://www.twitter.com/JaredMezz">@JaredMezz</a></h2>
+            <div class='col-md-6'>
+                <section class='social'>
+                    <h2>Github - <a href="https://github.com/JaredMezz2">JaredMezz2</a></h2>
+                    <h2>LinkedIn - <a href="https://www.linkedin.com/in/jared-mezzatesta-172a91122/">JaredMezzatesta</a></h2>
+                    <h2>Twitter - <a href="https://www.twitter.com/JaredMezz">@JaredMezz</a></h2>
 
-                    </section>
-                </div>
+                </section>
             </div>
         </div>
     </div>
-    <!-- Portfolio -->
-    <div id='resume'>
-        <div class='container'>
-            <!-- Skills -->
-            <div class='row'>
-                <div class='col-md-1 sideBar'></div>
-                <div class='col-md-8'>
-                    <h2 class='titleHighlight'>Resume</h2>
-                    <br>
-                    <div class='blurp'>
-                        <h4>HTML/CSS/Javascript</h4>
-                        <p>Developed through a personal interest.</p>
-                        <h4>Python</h4>
-                        <p>Used throughout 3 years of schooling.</p>
-                    </div>
-                </div>
-                <div class='col-md-3'>
-                    <!-- Header -->
-                    <br>
-                    <h3>Skills</h3>
+</div>
+<!-- Portfolio -->
+<div id='resume'>
+    <div class='container'>
+        <!-- Skills -->
+        <div class='row'>
+            <div class='col-md-1 sideBar'></div>
+            <div class='col-md-8'>
+                <h2 class='titleHighlight'>Resume</h2>
+                <br>
+                <div class='blurp'>
+                    <h4>HTML/CSS/Javascript</h4>
+                    <p>Developed through a personal interest.</p>
+                    <h4>Python</h4>
+                    <p>Used throughout 3 years of schooling.</p>
                 </div>
             </div>
+            <div class='col-md-3'>
+                <!-- Header -->
+                <br>
+                <h3>Skills</h3>
+            </div>
+        </div>
 
-            <!-- Work History -->
-            <div class='row'>
-                <div class='col-md-1 sideBar'></div>
-                <div class='col-md-8 blurp'>
-                    <br>
-                    <h4>Tim Hortons</h4>
-                    <p>Counter Staff, Food Production, Supervisor</p>
-                    <p>2015-2017</p>
-                </div>
-                <div class='col-md-3'>
-                    <!-- Header -->
-                    <h3>Employment</h3>
-                </div>
+        <!-- Work History -->
+        <div class='row'>
+            <div class='col-md-1 sideBar'></div>
+            <div class='col-md-8 blurp'>
+                <br>
+                <h4>Tim Hortons</h4>
+                <p>Counter Staff, Food Production, Supervisor</p>
+                <p>2015-2017</p>
             </div>
+            <div class='col-md-3'>
+                <!-- Header -->
+                <h3>Employment</h3>
+            </div>
+        </div>
 
-            <!-- Education -->
-            <div class='row'>
-                <div class='col-md-1 sideBar'></div>
-                <div class='col-md-8 blurp'>
-                    <br>
-                    <h4>University of Toronto</h4>
-                    <p>Pursing a degree in Computer Science</p>
-                    <p>2017-2021</p>
+        <!-- Education -->
+        <div class='row'>
+            <div class='col-md-1 sideBar'></div>
+            <div class='col-md-8 blurp'>
+                <br>
+                <h4>University of Toronto</h4>
+                <p>Pursing a degree in Computer Science</p>
+                <p>2017-2021</p>
+            </div>
+            <div class='col-md-3'>
+                <!-- Header -->
+                <h3>Education</h3>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Parralax Section 2 -->
+<div class='secondLax'></div>
+<!-- Resune -->
+<div id='portfolio'>
+    <div class='container'>
+        <div class='row'>
+            <div class='col-md-1 sideBar'></div>
+            <div class='col-md-11'>
+                <h2 class='titleHighlight'>Portfolio</h2>
+                <br>
+                <div class='row'>
+                    <div class='col-md-3 siteView'></div>
+                    <div class='col-md-3 siteView'></div>
+                    <div class='col-md-3 siteView'></div>
                 </div>
-                <div class='col-md-3'>
-                    <!-- Header -->
-                    <h3>Education</h3>
+                <div class='row'>
+                    <div class='col-md-3 siteView'></div>
+                    <div class='col-md-3 siteView'></div>
+                    <div class='col-md-3 siteView'></div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Parralax Section 2 -->
-    <div class='secondLax'></div>
-    <!-- Resune -->
-    <div id='portfolio'>
-        <div class='container'>
-            <div class='row'>
-                <div class='col-md-1 sideBar'></div>
-                <div class='col-md-11'>
-                    <h2 class='titleHighlight'>Portfolio</h2>
-                    <br>
-                    <div class='row'>
-                        <div class='col-md-3 siteView'></div>
-                        <div class='col-md-3 siteView'></div>
-                        <div class='col-md-3 siteView'></div>
-                    </div>
-                    <div class='row'>
-                        <div class='col-md-3 siteView'></div>
-                        <div class='col-md-3 siteView'></div>
-                        <div class='col-md-3 siteView'></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Contact -->
+</div>
+<!-- Contact -->
 
-    <div id='contact'>
-        <div class='container'>
-            <div class='row'>
-                <div class='col-md-1 sideBar'></div>
-                <div class='col-md-11'>
-                    <h2 class='titleHighlight'>Contact</h2>
+<div id='contact'>
+    <div class='container'>
+        <div class='row'>
+            <div class='col-md-1 sideBar'></div>
+            <div class='col-md-11'>
+                <h2 class='titleHighlight'>Contact</h2>
+                <br>
+                <h5>Feel free to shoot me a message and I'll be sure to get back to you.</h5>
+                <form class='myForm'>
+                    <label for="yname">Name </label>
+                    <input type="text" placeholder='- your name' id='yname' autocomplete="name">
                     <br>
-                    <h5>Feel free to shoot me a message and I'll be sure to get back to you.</h5>
-                    <form class='myForm'>
-                        <label for="yname">Name </label>
-                        <input type="text" placeholder='- your name' id='yname' autocomplete="name">
-                        <br>
-                        <label for="yemail">Email </label>
-                        <input type="email" placeholder='- your email' id='yemail' autocomplete="email">
-                        <br>
-                        <label for="ymessage"></label>
-                        <textarea name="textarea" id="ymessage" cols="70" rows="5" placeholder='your message.'></textarea>
-                        <br>
-                        <button class='submitButton' type='button'>Submit</button>
-                    </form>
-                </div>
+                    <label for="yemail">Email </label>
+                    <input type="email" placeholder='- your email' id='yemail' autocomplete="email">
+                    <br>
+                    <label for="ymessage"></label>
+                    <textarea name="textarea" id="ymessage" cols="70" rows="5" placeholder='your message.'></textarea>
+                    <br>
+                    <button class='submitButton' type='button'>Submit</button>
+                </form>
             </div>
         </div>
     </div>
-    <script type="text/javascript" src='homeJS.js'></script>
+</div>
+<script type="text/javascript" src='homeJS.js'></script>
 </body>
 </html>
