--- a/home.html
+++ b/home.html
@@ -53,7 +53,7 @@ s<!-- Navbar -->
                 <section class='aboutdesc'>
                     <h2 class='nameEmph'>Jared Mezzatesta</h2>
                     <h2>18 Years Old</h2>
-                    <h2>University of Toronto</h2>
+                    <h2>Trent University</h2>
                 </section>
             </div>
             <div class='col-md-6'>
@@ -81,6 +81,8 @@ s<!-- Navbar -->
                     <p>Developed through a personal interest.</p>
                     <h4>Python</h4>
                     <p>Used throughout 3 years of schooling.</p>
+                    <h4>C#</h4>
+                    <p>Current Language used in School</p>
                 </div>
             </div>
             <div class='col-md-3'>
@@ -97,7 +99,11 @@ s<!-- Navbar -->
                 <br>
                 <h4>Tim Hortons</h4>
                 <p>Counter Staff, Food Production, Supervisor</p>
-                <p>2015-2017</p>
+                <p>08/15-08/17</p>
+                <br>
+                <h4>WeedMan</h4>
+                <p>Lawn Care Technition</p>
+                <p>05/18 - 08/18</p>
             </div>
             <div class='col-md-3'>
                 <!-- Header -->
@@ -110,9 +116,9 @@ s<!-- Navbar -->
             <div class='col-md-1 sideBar'></div>
             <div class='col-md-8 blurp'>
                 <br>
-                <h4>University of Toronto</h4>
+                <h4>Trent University</h4>
                 <p>Pursing a degree in Computer Science</p>
-                <p>2017-2021</p>
+                <p>Exp 2021</p>
             </div>
             <div class='col-md-3'>
                 <!-- Header -->
