testing deployment w/commit

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!--Importing stylesheet & fonts-->
     <link rel="stylesheet" type="text/css" href="homestyle.css">
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Pacifico" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
     <!--Importing jQuery-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
@@ -16,11 +17,6 @@
 <body>
 s<!-- Navbar -->
 <nav class="navbar fixed-top navbar-light navbar-bg">
-    <!-- <a class="navbar-link navHidden" href='#intro'>About</a>
-    <a class="navbar-link navHidden" href='#resume'>Resume</a>
-    <a class="navbar-brand navTrigger"><- Jared M -></a>
-    <a class="navbar-link navHidden" href='portfolio'>Portfolio</a>
-    <a class="navbar-link navHidden" href='contact'>Contact</a> -->
     <div class='row'>
         <div class='col-md-1 navHidden'></div>
         <div class='col-md-1 navHidden'><a href="#intro" class='navOption'>About</a></div>
@@ -52,7 +48,7 @@ s<!-- Navbar -->
             <div class='col-md-6'>
                 <section class='aboutdesc'>
                     <h2 class='nameEmph'>Jared Mezzatesta</h2>
-                    <h2>18 Years Old</h2>
+                    <h2>19 Years Old</h2>
                     <h2>Trent University</h2>
                 </section>
             </div>
@@ -82,7 +78,7 @@ s<!-- Navbar -->
                     <h4>Python</h4>
                     <p>Used throughout 3 years of schooling.</p>
                     <h4>C#</h4>
-                    <p>Current Language used in School</p>
+                    <p>Current Language used in school.</p>
                 </div>
             </div>
             <div class='col-md-3'>
