--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
 </nav>
 <!-- Parralax Section 1 -->
-<div class='firstLax'>
+<div class='firstLax vertCenter'>
     <div class="container centerIt">
         <div class="row nameHeader">
             <div class="col-lg-2"></div>
@@ -45,14 +45,14 @@
 <div id='intro'>
     <div class='container'>
         <div class='row'>
-            <div class='col-lg-6'>
+            <div class='col-sm-6'>
                 <section class='aboutdesc'>
                     <h2 class='nameEmph'>Jared Mezzatesta</h2>
                     <h2>19 Years Old</h2>
                     <h2>Trent University</h2>
                 </section>
             </div>
-            <div class='col-lg-6'>
+            <div class='col-sm-6'>
                 <section class='aboutdesc'>
                     <h2>Github - <a href="https://github.com/JaredMezz2">JaredMezz2</a></h2>
                     <h2>LinkedIn - <a href="https://www.linkedin.com/in/JaredMezzatesta">JaredMezzatesta</a></h2>
@@ -125,28 +125,28 @@
 </div>
 <!-- Parralax Section 2 -->
 <div class='secondLax'></div>
-<!-- Resune -->
-<div id='portfolio'>
-    <div class='container'>
-        <div class='row'>
-            <div class='col-lg-1 col-sm-0 sideBar'></div>
-            <div class='col-lg-11 col-sm-11'>
-                <h2 class='titleHighlight'>Portfolio</h2>
-                <br>
-                <div class='row'>
-                    <div class='col-md-3 siteView'></div>
-                    <div class='col-md-3 siteView'></div>
-                    <div class='col-md-3 siteView'></div>
-                </div>
-                <div class='row'>
-                    <div class='col-md-3 siteView'></div>
-                    <div class='col-md-3 siteView'></div>
-                    <div class='col-md-3 siteView'></div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<!-- Resume - I dont have enough to fill this section so its unecessary-->
+<!--<div id='portfolio'>-->
+    <!--<div class='container'>-->
+        <!--<div class='row'>-->
+            <!--<div class='col-lg-1 col-sm-0 sideBar'></div>-->
+            <!--<div class='col-lg-11 col-sm-11'>-->
+                <!--<h2 class='titleHighlight'>Portfolio</h2>-->
+                <!--<br>-->
+                <!--<div class='row'>-->
+                    <!--<div class='col-md-3 siteView'></div>-->
+                    <!--<div class='col-md-3 siteView'></div>-->
+                    <!--<div class='col-md-3 siteView'></div>-->
+                <!--</div>-->
+                <!--<div class='row'>-->
+                    <!--<div class='col-md-3 siteView'></div>-->
+                    <!--<div class='col-md-3 siteView'></div>-->
+                    <!--<div class='col-md-3 siteView'></div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
 <!-- Contact -->
 <div id='contact'>
     <div class='container'>
@@ -156,6 +156,7 @@
                 <h2 class='titleHighlight'>Contact</h2>
                 <br>
                 <h5>Feel free to shoot me an email and I'll be sure to get back to you.</h5>
+                <br>
                 <h5><i class="fas fa-envelope"></i>  Jared.Mezzatesta@gmail.com</h5>
             </div>
         </div>
