--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class='col-sm-1 navHidden'></div>
         <div class='col-sm-1 navHidden'><a href="#resume" class='navOption'>Resume</a></div>
         <div class='col-sm-12 navTrigger headerName'>Jared M</div>
-        <div class='col-sm-1 navHidden'><a href="#portfolio" class='navOption'>Portfolio</a></div>
+        <div class='col-sm-1 navHidden'><a href="https://github.com/JaredMezz2" class='navOption'>Portfolio</a></div>
         <div class='col-sm-1 navHidden'></div>
         <div class='col-sm-1 navHidden'><a href="#contact" class='navOption'>Contact</a></div>
         <div class='col-sm-1 navHidden'></div>
