--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@
             </div>
             <div class='col-sm-6'>
                 <section class='aboutdesc'>
-                    <h2>Github - <a href="https://github.com/JaredMezz2">JaredMezz2</a></h2>
-                    <h2>LinkedIn - <a href="https://www.linkedin.com/in/JaredMezzatesta">JaredMezzatesta</a></h2>
-                    <h2>Twitter - <a href="https://www.twitter.com/JaredMezz">@JaredMezz</a></h2>
-
+                    <h2><i class="fab fa-github"></i> - <a href="https://github.com/JaredMezz2">JaredMezz2</a></h2>
+                    <h2><i class="fab fa-linkedin"></i> - <a href="https://www.linkedin.com/in/JaredMezzatesta">JaredMezzatesta</a></h2>
+                    <h2><i class="fab fa-twitter"></i> - <a href="https://www.twitter.com/JaredMezz">@JaredMezz</a></h2>
                 </section>
             </div>
         </div>
