Odd ends cleaned up, text bigger

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 <div class='firstLax vertCenter'>
     <div class="container centerIt">
         <div class="row nameHeader">
-            <div class="col-lg-2"></div>
-            <div class="col-lg-8 col-md-12 homeName">
+            <div class="col-lg-1"></div>
+            <div class="col-lg-10 col-sm-12 homeName">
                 <h2>Hi, I'm <br><span id='name'>Jared Mezzatesta</span><br>Amateur Python/Web Developer.</h2>
             </div>
-            <div class="col-lg-2"></div>
+            <div class="col-lg-1"></div>
         </div>
     </div>
 </div>
